--- a/public/index.html
+++ b/public/index.html
@@ -25,14 +25,11 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
-    <script
-      async
-      src="https://www.googleoptimize.com/optimize.js?id=OPT_CONTAINER_ID"
-    ></script>
-    <script
+    <script src="https://www.googleoptimize.com/optimize.js?id=OPT-P3JFSPD"></script>
+    <!-- <script
       async
       src="https://www.googletagmanager.com/gtag/js?id=G-YQM0DZ78VN"
-    ></script>
+    ></script> -->
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
