--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
         }, c);
         h.timeout = c;
       })(window, document.documentElement, "async-hide", "dataLayer", 4000, {
-        CONTAINER_ID: true,
+        CONTAINER_ID: "OPT-P3JFSPD",
       });
     </script>
   </head>
