Update GA/GO configs 13

--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
         opacity: 0 !important;
       }
     </style>
-    <script>
+    <!-- <script>
       (function (a, s, y, n, c, h, i, d, e) {
         s.className += " " + y;
         h.start = 1 * new Date();
@@ -34,7 +34,7 @@
       })(window, document.documentElement, "async-hide", "dataLayer", 4000, {
         "OPT-P3JFSPD": true,
       });
-    </script>
+    </script> -->
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
